--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.EducationApplication"
         tools:targetApi="31">
         <activity
+            android:name=".ui.signup.SignUpActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:label="@string/title_activity_sign_up"
+            android:theme="@style/Theme.EducationApplication" />
+        <activity
             android:name=".ui.login.SignUpActivity"
             android:exported="false"
             android:label="@string/title_activity_sign_up" />
