--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -13,11 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EducationApplication"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ui.utilities.NewsActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.study.LibraryActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity android:name=".ui.calendar.CalendarFragment" />
         <activity
             android:name=".ui.personal.ChangePasswordActivity"
@@ -33,12 +35,15 @@
             android:theme="@style/Theme.EducationApplication" />
         <activity
             android:name=".ui.splash.SplashActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
             android:label="@string/title_activity_login" />
+        <activity
+            android:name=".ui.utilities.DetailNewsActivity"
+            android:exported="false"
+            android:label="@string/title_utilities" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
